Update ParseEARKSIPTest test